packages/apps/spaces/styles/date-picker.scss
.react-date-picker {
  display: inline-flex;
  position: relative;
  height:40px;
  width: 100%;
}

.react-date-picker,
.react-date-picker *,
.react-date-picker *:before,
.react-date-picker *:after {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

.react-date-picker abbr[title] {
  border-bottom: none !important;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  -webkit-text-decoration: none !important;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
}


.react-date-picker--disabled {
  background-color: #f0f0f0;
  color: #6d6d6d;
}

.react-date-picker__wrapper {
  display: flex;
  flex-grow: 1;
  flex-shrink: 0;
  //flex-direction: row-reverse;
  position: relative;
}

.react-date-picker__inputGroup {
  display: none;
}

.react-date-picker:hover .react-date-picker__calendar-button {
  border-bottom: 1px solid var(--chakra-colors-gray-300);
}

.react-date-picker--open,
.react-date-picker:focus-within,
.react-date-picker:focus,
.react-date-picker:focus-visible {
  & .react-date-picker__calendar-button {
    border-bottom: 1px solid var(--chakra-colors-primary-500) !important;
  }
}

.react-date-picker__calendar-button {
  width: 100%;
  grid-area: input;
  border-bottom: 1px solid var(--chakra-colors-primary-500);

  &:hover{
    border-bottom: 1px solid var(--chakra-colors-gray-300);

  }
  &:focus {
    border-bottom: 1px solid var(--chakra-colors-primary-500) !important;
  }
}

.react-date-picker__clear-button {
  right: 0;
  top: 9px;
  position: absolute;
  display: none;
  &:hover {
    background: var(--chakra-colors-gray-100);
    border-radius: 4px;
  }
}

.react-date-picker--open,
.react-date-picker:focus-within,
.react-date-picker:focus {
  & .react-date-picker__clear-button {
    display: block;
  }
}



.react-date-picker__inputGroup__divider {
  padding: 1px 0;
  white-space: pre;
}

.react-date-picker__inputGroup__divider,
.react-date-picker__inputGroup__leadingZero {
  display: inline-block;
}

.react-date-picker__inputGroup__input {
  min-width: 0.54em;
  height: 100%;
  position: relative;
  padding: 0 1px;
  border: 0;
  background: none;
  color: currentColor;
  font: inherit;
  box-sizing: content-box;
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
}

.react-date-picker__inputGroup__input::-webkit-outer-spin-button,
.react-date-picker__inputGroup__input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin: 0;
}

.react-date-picker__inputGroup__input:invalid {
  //background: rgba(255, 0, 0, 0.1);
}

.react-date-picker__inputGroup__input:focus-visible {
  outline: none
}

.react-date-picker__inputGroup__input--hasLeadingZero {
  margin-left: -0.54em;
  padding-left: calc(1px + 0.54em);
}

.react-date-picker__button {
  border: 1px solid transparent;
  background: transparent;
  padding: 4px 6px;
}

.react-date-picker__button:enabled {
  cursor: pointer;
}

.react-date-picker__button:enabled:hover .react-date-picker__button__icon,
.react-date-picker__button:enabled:focus .react-date-picker__button__icon {
  //stroke: #0078d7;
}

.react-date-picker__button:disabled .react-date-picker__button__icon {
  stroke: #6d6d6d;
}

.react-date-picker__button svg {
  display: inherit;
}

.react-date-picker__calendar {
  width: 350px;
  max-width: 100vw;
  z-index: 1;
  inset: 120% 0px auto auto !important;
}

.react-date-picker__calendar--closed {
  display: none;
}

.react-date-picker__calendar .react-calendar {
  border-width: thin;
}
.react-date-picker__inputGroup {
  width: 100px;
}


/* CALENDAR*/

.react-calendar {
  width: 350px;
  max-width: 100%;
  background: white;
  font-family: inherit;
  line-height: 1.125em;
  box-shadow: 0px 8px 8px -4px #10182808;
  border-radius: 8px;
  padding: 24px;

}

.react-calendar--doubleView {
  width: 700px;
}

.react-calendar--doubleView .react-calendar__viewContainer {
  display: flex;
  margin: -0.5em;
}

.react-calendar--doubleView .react-calendar__viewContainer > * {
  width: 50%;
  margin: 0.5em;
}

.react-calendar,
.react-calendar *,
.react-calendar *:before,
.react-calendar *:after {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  color: var(--chakra-colors-gray-700);

}

.react-calendar button {
  margin: 0;
  border: 0;
  outline: none;
}

.react-calendar button:enabled:hover {
  cursor: pointer;
}
.react-calendar__navigation__label__labelText {
  color: var(--chakra-colors-gray-700);
  font-size: 16px;
  font-weight: 600
}

.react-calendar__navigation__label {
  flex-grow: 0 !important;
  padding: 4px 8px;
}

.react-calendar__navigation__arrow.react-calendar__navigation__next2-button,
.react-calendar__navigation__arrow.react-calendar__navigation__prev2-button {
  display: none;
}

.react-calendar__navigation__arrow.react-calendar__navigation__prev-button,
.react-calendar__navigation__arrow.react-calendar__navigation__next-button {
  position: relative;
  font-size: 0;
  height: 30px;
  width: 30px;
}

.react-calendar__navigation__arrow.react-calendar__navigation__prev-button:after{
  content: '';
  display: inline-block;
  height: 30px;
  width: 30px;
  color: var(--chakra-colors-gray-500);
  background-color: var(--chakra-colors-gray-500);
  -webkit-mask: url(../public/icons/chevron-left.svg) bottom center no-repeat;
  mask: url(../public/icons/chevron-left.svg) bottom center no-repeat;
}

.react-calendar__navigation__arrow.react-calendar__navigation__next-button:after{
  content: '';
  display: inline-block;
  height: 30px;
  width: 30px;
  color: var(--chakra-colors-gray-500);
  background-color: var(--chakra-colors-gray-500);
  -webkit-mask: url(../public/icons/chevron-right.svg) bottom center no-repeat;
  mask: url(../public/icons/chevron-right.svg) bottom center no-repeat;

}

.react-calendar__navigation {
  display: flex;
  height: 28px;
  margin-bottom: 1em;
  justify-content: space-between;
}

.react-calendar__navigation button {
  min-width: unset;
  background: none;
  border-radius: 4px;
}

.react-calendar__navigation button:disabled {
  background-color: #f0f0f0;
}

.react-calendar__navigation button:enabled:hover,
.react-calendar__navigation button:enabled:focus {
  background-color: var(--chakra-colors-gray-100);
}

.react-calendar__month-view__days {
  gap: 3px;
  display: grid !important;
  grid-template-columns: repeat(7, 1fr);
}

.react-calendar__month-view__weekdays {
  text-align: center;
  text-transform: uppercase;
  font-weight: bold;
  font-size: 0.75em;
}

.react-calendar__month-view__weekdays__weekday abbr {
  color: var(--chakra-colors-gray-700);
  margin-bottom: 10px;
  text-decoration: none;
  font-size: 14px;
}

.react-calendar__month-view__weekNumbers .react-calendar__tile {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 0.75em;
  font-weight: bold;
}

.react-calendar__month-view__days__day--weekend {
  color: #d10000;
}

.react-calendar__month-view__days__day--neighboringMonth abbr{
  color: var(--chakra-colors-gray-400);
}



.react-calendar__year-view .react-calendar__tile,
.react-calendar__decade-view .react-calendar__tile,
.react-calendar__century-view .react-calendar__tile {
  //padding: 2em 0.5em;
}

.react-calendar__tile {
  max-width: 100%;
  //padding: 8px;
  height: 40px;
  max-height: 40px;
  max-width: 40px;
  background: none;
  text-align: center;
  border-radius: 50%;
}

.react-calendar__tile:disabled {
  background-color: var(--chakra-colors-primary-100);

}

.react-calendar__tile:enabled:hover,
.react-calendar__tile:enabled:focus {
  background-color: var(--chakra-colors-primary-100);
  border: 1px solid var(--chakra-colors-primary-200);
  font-weight: 600;
}



.react-calendar__tile--hasActive {
  background-color: var(--chakra-colors-primary-50);
  border: 1px solid var(--chakra-colors-primary-200) !important;
  font-weight: 600;
}

.react-calendar__tile--hasActive:enabled:hover,
.react-calendar__tile--hasActive:enabled:focus {
  background-color: var(--chakra-colors-primary-100);

}

.react-calendar__tile--active {
  background-color: var(--chakra-colors-primary-50);
  border: 1px solid var(--chakra-colors-primary-200) !important;
  font-weight: 600;
}

.react-calendar__tile--active:enabled:hover,
.react-calendar__tile--active:enabled:focus {
  background-color: var(--chakra-colors-primary-100);
  border: 1px solid var(--chakra-colors-primary-200);
  font-weight: 600;
}

.react-calendar--selectRange .react-calendar__tile--hover {
  background-color: #e6e6e6;
}


.react-calendar__year-view__months {
  display: grid !important;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 4px;
}

.react-calendar__tile.react-calendar__year-view__months__month {
  width: 100%;
  max-width: unset;
  border-radius: 20px;
  border: 1px solid transparent;
}


.react-calendar__decade-view__years {
  display: grid !important;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 4px;
}

.react-calendar__century-view__decades__decade,
.react-calendar__decade-view__years__year {
  width: 100%;
  max-width: unset;
  border-radius: 20px;
  border: 1px solid transparent;
}

.react-calendar__century-view__decades {
  display: grid !important;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 4px;
}

